test/bad/coord3.pacc
/*
nocc 8 15  "error: 'q' undeclared (first use in this function)"
*/

/* test that C errors are reported at the right place in the pacc file for
 * braceless expressions */

S <- "foo" -> q
